			irker history 

1.0 @ 2012-09-27
  First production version, somewhat rushed by the sudden death of cia.vc.

1.1 @ 2012-09-28
  Add a delay to avoid threads spinning on the empty-queue-check, eating CPU.
  Fix a bug in reporting of multi-file commits.

1.2 @
  All segments of a message with embedded newlines are now transmitted.



