@@ -9,6 +9,10 @@
 
 1.2 @
   All segments of a message with embedded newlines are now transmitted.
+  Message reduction - irkerhook driops the filelist on execessively long ones.
+  Shell quote hardening in irkerhook.py.
+
+
 
 
 
